deploy/k8s/istio/peerauthentication-strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cryptotax
spec:
  mtls:
    mode: STRICT # все сервисы в этом namespace будут использовать mTLS для шифрования трафика между собой, если не указано иное в конкретных PeerAuthentication для отдельных сервисов
