deploy/k8s/istio/requestauthentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: cryptotax-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: https://auth.cryptotax.local
      audiences:
        - cryptotax.api
      jwksUri: http://auth-svc.cryptotax.svc.cluster.local:8085/.well-known/jwks.json
      forwardOriginalToken: true
      outputClaimToHeaders:
        - header: x-tenant-id
          claim: sub
        - header: x-role
          claim: role
